--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </div>
         </div>
 
-        <div id="cursos" class="navigation-tab" style="display:none">
+        <div id="cursos" class="navigation-tab" style="display:block">
             <center><button type="button" class="btn btn-primary rounded-pill novo-curso">INICIAR NOVO CURSO</button></center>
 
             <center><div class="card-container">
